--- a/src/components/BattleMap/style.css
+++ b/src/components/BattleMap/style.css
@@ -1,9 +1,31 @@
-@import "../../../node_modules/@blueprintjs/core/dist/blueprint.css";
+    #battleMap { 
+        width: 100%;
+        height: 600px;
+        border: 2px solid;
+        border-color: blue;
+        background: #9500ff url('/starbackground.jpg');
+    }
 
-.trajectory {
-    opacity: 0.3;
-}
+    .ship_shape {
+        fill: red;
+    }
+    .thumbViewClass {
+        border: 1px solid black;
+        position: absolute;
+        bottom: 5px;
+        left: 5px;
+        width: 20%;
+        height: 30%;
+        margin: 3px;
+        padding: 3px;
+        overflow: hidden;
+      }
 
-svg.battlemap {
-    background-color: black;
-}
+      #thumbView {
+        z-index: 110;
+        background: white;
+      }
+
+      #scopeContainer {
+        z-index: 120;
+      }
