--- a/src/components/BattleMap/style.css
+++ b/src/components/BattleMap/style.css
@@ -1,31 +1,42 @@
-    #battleMap { 
-        width: 100%;
-        height: 600px;
-        border: 2px solid;
-        border-color: blue;
-        background: #9500ff url('/starbackground.jpg');
-    }
+#battleMap { 
+    width: 100%;
+    height: 600px;
+    border: 2px solid;
+    border-color: blue;
+    background: #9500ff url('/starbackground.jpg');
+}
 
-    .ship_shape {
-        fill: red;
-    }
-    .thumbViewClass {
-        border: 1px solid black;
-        position: absolute;
-        bottom: 5px;
-        left: 5px;
-        width: 20%;
-        height: 30%;
-        margin: 3px;
-        padding: 3px;
-        overflow: hidden;
-      }
+.ship_shape {
+    fill: red;
+}
+.thumbViewClass {
+    border: 1px solid black;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    width: 20%;
+    height: 30%;
+    margin: 3px;
+    padding: 3px;
+    overflow: hidden;
+}
 
-      #thumbView {
-        z-index: 110;
-        background: white;
-      }
+#thumbView {
+    z-index: 110;
+    background: white;
+}
 
-      #scopeContainer {
-        z-index: 120;
-      }
+#scopeContainer {
+    z-index: 120;
+}
+
+.player-0 { fill: #2965CC; }
+.player-1 { fill: #29A634; }
+.player-2 { fill: #D99E0B; }
+.player-3 { fill: #D13913; }
+.player-4 { fill: #8F398F; }
+.player-5 { fill: #00B3A4; }
+.player-6 { fill: #DB2C6F; }
+.player-7 { fill: #9BBF30; }
+.player-8 { fill: #96622D; }
+.player-9 { fill: #7157D9; }
